{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 33,
  "lineage": "1b5bbbc7-5bd5-41fc-ae8b-e09e21880f8c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2lbr1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e2d37b6a0129927",
            "arn": "arn:aws:ec2:us-west-2:156864767418:instance/i-0a3eab05d6c1210b3",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a3eab05d6c1210b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f8ff1f2adcc47771",
            "private_dns": "ip-10-0-1-6.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059ab3901d1f818a9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eeef4e147a312a27",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0844dae1924a9406c"
            ]
          },
          "dependencies": [
            "aws_security_group.s1",
            "aws_subnet.subnet1pri",
            "aws_vpc.itaxvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156864767418:internet-gateway/igw-00e8e4de727665406",
            "id": "igw-00e8e4de727665406",
            "owner_id": "156864767418",
            "tags": {
              "name": "igw"
            },
            "tags_all": {
              "name": "igw"
            },
            "vpc_id": "vpc-088ca0540dd4a1dd1"
          },
          "dependencies": [
            "aws_vpc.itaxvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:156864767418:loadbalancer/app/test-lb-tf/6561e07b70248fb1",
            "arn_suffix": "app/test-lb-tf/6561e07b70248fb1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-test-lb-tf-988667018.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:156864767418:loadbalancer/app/test-lb-tf/6561e07b70248fb1",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-090101f8fc427fc8b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-050b8d43b524f61e1"
              },
              {
                "subnet_id": "subnet-0eeef4e147a312a27"
              }
            ],
            "subnets": [
              "subnet-050b8d43b524f61e1",
              "subnet-0eeef4e147a312a27"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-088ca0540dd4a1dd1",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_s3_bucket.itaxbucket1",
            "aws_subnet.subnet1pri",
            "aws_subnet.subnet2pub",
            "aws_vpc.itaxvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156864767418:route-table/rtb-01b7b8d45b12e6790",
            "id": "rtb-01b7b8d45b12e6790",
            "owner_id": "156864767418",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00e8e4de727665406",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-088ca0540dd4a1dd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_vpc.itaxvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040667aa13a1aa9d5",
            "route_table_id": "rtb-01b7b8d45b12e6790",
            "subnet_id": "subnet-050b8d43b524f61e1"
          },
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_route_table.rt1",
            "aws_subnet.subnet2pub",
            "aws_vpc.itaxvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "s1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156864767418:security-group/sg-0844dae1924a9406c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "id": "sg-0844dae1924a9406c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221018090420507500000001",
            "name_prefix": "terraform-",
            "owner_id": "156864767418",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-088ca0540dd4a1dd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.itaxvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "s2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156864767418:security-group/sg-0b2ffcf565be690d0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0b2ffcf565be690d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6553
              }
            ],
            "name": "terraform-20221018090420508000000002",
            "name_prefix": "terraform-",
            "owner_id": "156864767418",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-088ca0540dd4a1dd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.itaxvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156864767418:subnet/subnet-0eeef4e147a312a27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeef4e147a312a27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156864767418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-088ca0540dd4a1dd1"
          },
          "dependencies": [
            "aws_vpc.itaxvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156864767418:subnet/subnet-050b8d43b524f61e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050b8d43b524f61e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156864767418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-088ca0540dd4a1dd1"
          },
          "dependencies": [
            "aws_vpc.itaxvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "itaxvpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:156864767418:vpc/vpc-088ca0540dd4a1dd1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03974cb92b570e2d3",
            "default_route_table_id": "rtb-0859e0585aa8d0fec",
            "default_security_group_id": "sg-090101f8fc427fc8b",
            "dhcp_options_id": "dopt-0dae96615635c53a0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-088ca0540dd4a1dd1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0859e0585aa8d0fec",
            "owner_id": "156864767418"
          }
        }
      ]
    }
  ]
}